<resources>
    <string name="app_name">World Traveler</string>
    <string name="title_activity_maps">World Traveler</string>




    <!--AppIntro-->
    <string name="ai_welcome">Welcome to</string>
    <string name="ai_welcome_text">Track the cities you\'ve visited and add photos of your journeys. You will be able to see the number of cities visited in the "Statistics" section on the left. </string>
    <string name="ai_add_city_title">Add city</string>
    <string name="ai_add_city_text">Simply click on the green "add" button in the lower right corner and then search for any city in the menu. You will need an internet connection for this. </string>
    <string name="ai_delete_city_title">Delete a city</string>
    <string name="ai_delete_city_text">You can remove accidentally added cities by dragging their marker to the bottom of the map</string>
    <string name="ai_marker_title">Add and view photos</string>
    <string name="ai_marker_text">After you add a city, you can add or delete photos by clicking on the photo icon above it.</string>
    <string name="ai_add_photos_title">Adding and deleting photos</string>
    <string name="ai_add_photos_text">You cann add pictures by pressing on each markers pop-up window, which appears on pressing the marker. After this, you can add or delete photos from your phone.</string>
    <string name="ai_iv_entry_logo_desc">World Traveler logo</string>
    <string name="ai_tv_tutorial_skip">SKIP</string>
    <string name="ai_tv_tutorial_done">DONE</string>


    <!--MainActivity-->
    <string name="tv_delete">Delete</string>
    <string name="placeautocomplete_hint">Search for places you have visited</string>
    <string name="snackbar_duplicate">You already added this place!</string>
    <string name="snackbar_place_added">You successfully added this place!</string>
    <string name= "fragment_map">Map</string>
    <string name="fragment_statistics">Statistics</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_user">User</string>
    <string name="loading">Loading</string>


    <!--MarkerActivity-->
    <string name="sb_deleted_image">Image deleted from album!</string>


    <!--Drawer-->
    <string name="open_drawer">Open</string>
    <string name="closed_drawer">Closed</string>
    <string name="menu_item_map">Map</string>
    <string name="menu_item_statistics">Statistics</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_user">User</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_friends">Find friends</string>
    <string name="menu_item_personalization">Personalization</string>

    <!--Statistics fragment-->
    <string name="tv_statistics_headline">Your personal statistics</string>
    <string name="tv_statistics_cities_string">Cities</string>
    <string name="tv_statistics_countries_string">Countries</string>
    <string name="tv_statistics_percentage_caption">Percentage of countries visited:</string>


    <!--Settings-->
    <string name="settings_show_countries_label">Show country names</string>
    <string name="settings_show_countries_key" translatable="false">show_country_names</string>
    <string name="settings_show_cities_label">Show city names</string>
    <string name="settings_show_cities_key" translatable="false">show_city_names</string>
    <string name="settings_theme_label">Set application theme</string>
    <string name="settings_theme_key">select_theme</string>
    <string name="pref_theme_dark_label">Dark</string>
    <string name="pref_theme_dark_value" translatable="false">dark</string>
    <string name="pref_theme_light_label">Light</string>
    <string name="pref_theme_light_value" translatable="false">light</string>
    <string name="pref_profile_picture">profile_picture</string>
    <string name="pref_profile_picture_txt">Select your profile picture</string>
    <string name="pref_search_key">allow_show_in_search</string>
    <string name="pref_search_txt">Make profile visible to other users</string>
    <string name="pref_backup_key">backup_data</string>
    <string name="pref_backup_txt">Make a backup of your data!</string>
    <string name="close_app">Close</string>


    <!--Sharedpreferences-->
    <string name="sp_mapstyle_key" translatable="false">map_style_jsonarray</string>
    <string name="sp_logged_in_status" translatable="false">logged_in</string>


    <!--Login Fragment-->
    <string name="tv_login">Login</string>
    <string name="tv_login_register_email">Or register using your email!</string>
    <string name="tv_login_pwd_forgotten">Forgot your password?</string>
    <string name="tv_login_email">E-Mail</string>
    <string name="tv_login_password">Password</string>
    <string name="tv_no_user_account">No current User account? Register now!</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_user_register">Register</string>
    <string name="sb_login_successfull">Successful login!</string>
    <string name="btn_login_sign_out">Sign out</string>
    <string name="tv_skip_login">Skip for now</string>
    <string name="tv_dialog_loading">Loading</string>

    <string name="facebook_app_id">337061093492696</string>
    <string name="fb_login_protocol_scheme">fb337061093492696</string>

    <!--Dialog password reset-->
    <string name="btn_positive">Reset password</string>
    <string name="btn_negative">Cancel</string>

    <!-- Register fragment-->
    <string name="register_email_de">Email</string>
    <string name="register_pwd_de">Password</string>
    <string name="register_pwd_repeat_de">Repeat password</string>
    <string name="register_name_de">Name</string>
    <string name="register_first_name_de">Last name</string>
    <string name="register_birthday_de">Birthday</string>


    <!--Profile Fragment-->
    <string name="drawer_header_profile_name">Giannis Antetokounmpu</string>
    <string name="fragment_profile_share_message">Check out the cities i visited! Keep track of your travels and much more with WorldTraveler! </string>
    <string name="fragment_profile_achievement_badge">Badge</string>
    <string name="fragment_profile_achievement_percent"> Percentage \n traveled</string>
    <string name="fragment_profile_achievement_cities">Number of \n cities visited</string>
    <string name="fragment_profile_achievement_countries">Number of \n countries visited</string>
    <string name="btn_profile_fragment_share">SHARE</string>
    <string name="logout">Sign out</string>
    <string name="login">Sign in</string>

    <!--Errors-->
    <string name="error_pwd_mismatch">The passwords don\'t match!</string>
    <string name="error_email_exists">The email address is already in use by another account.</string>

    <string name="error_invalid_email">The email address is badly formatted.</string>
    <string name="error_invalid_pwd">The password is invalid.</string>
    <string name="error_invalid_user">There is no currentUser corresponding to this email. </string>
    <string name="error_no_internet_connection">You have no internet connection, please reconnect and try again!</string>
    <string name="placeholder_uname">Dwayne Johnson</string>


</resources>
