<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_item_map" />

        <item
            android:id="@+id/menu_item_statistics"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/menu_item_statistics" />


        <item android:title="@string/menu_item_user">
            <menu>
                <item
                    android:checkable="true"
                    android:id="@+id/menu_item_login"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/login" />
            </menu>
        </item>

        <item android:title="@string/menu_item_personalization">
            <menu>
                <item
                    android:id="@+id/menu_item_settings"
                    android:checkable="true"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/menu_item_settings" />
            </menu>
        </item>

    </group>

</menu>