<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/cl_register_fragment">


        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_email_de"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_first_name" />

        <EditText
            android:id="@+id/et_register_pwd1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_pwd_de"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

        <EditText
            android:id="@+id/et_register_pwd2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_pwd_repeat_de"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_pwd1" />


        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="64dp"
            android:hint="@string/register_name_de"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_register_first_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_first_name_de"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_name" />


        <Button
            android:id="@+id/btn_email_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/btn_user_register"
            android:textAllCaps="false"
            android:textColor="#462727"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_pwd2" />


    </android.support.constraint.ConstraintLayout>
</layout>